<resources>
    <string name="app_name">Clear Skies</string>
    <string name="cityName">London, GB</string>
    <string name="temperatureValue">20°</string>
    <string name="hourlyText">hourly test</string>
    <string name="dailyText">daily test</string>
    <string name="footerText">© Stefan Novak | 2020</string>
    <string name="weatherSummaryText">Sunny</string>
    <string name="icon">icon</string>

<!--    HOURLY WEATHER STRINGS-->
    <string name="nowHour">Now</string>
    <string name="oneHour">5pm</string>
    <string name="twoHour">6pm</string>
    <string name="threeHour">7pm</string>
    <string name="fourHour">8pm</string>
    <string name="fiveHour">9pm</string>
    <string name="sixHour">10pm</string>
    <string name="sevenHour">11pm</string>
    <string name="eightHour">12am</string>
    <string name="nineHour">1am</string>
    <string name="tenHour">2am</string>
    <string name="elevenHour">3am</string>
    <string name="twelvehour">4am</string>

    <string name="nowTemp">2??</string>
    <string name="oneTemp">3??</string>

    <string name="currentDayText">Saturday</string>

    <!--    HOURLY TABLE COLUMNS-->
    <string name="nextDay">Sunday</string>
    <string name="oneHighTemp">t?</string>
    <string name="oneLowTemp">"t?"</string>
    <string name="oneWeatherIcon">Cloudy</string>

    <string name="twoDay">Monday</string>
    <string name="twoHighTemp">23?</string>
    <string name="twoLowTemp">19?</string>
    <string name="twoWeatherIcon">Sunny</string>

    <string name="threeDay">Tuesday</string>
    <string name="threeHighTemp">24?</string>
    <string name="threeLowTemp">19?</string>
    <string name="threeWeatherIcon">Sunny</string>

    <string name="fourDay">Wednesday</string>
    <string name="fourHighTemp">26</string>
    <string name="fourLowTemp">20</string>
    <string name="fourWeatherIcon">Sunny</string>

    <string name="fiveDay">Thursday</string>
    <string name="fiveHighTemp">20</string>
    <string name="fiveLowTemp">16</string>
    <string name="fiveWeatherIcon">Rainy</string>

    <string name="sixDay">Friday</string>
    <string name="sixHighTemp">21</string>
    <string name="sixLowTemp">15</string>
    <string name="sixWeatherIcon">Cloudy</string>

    <string name="sevenDay">Saturday</string>
    <string name="sevenHighTemp">24</string>
    <string name="sevenLowTemp">17</string>
    <string name="sevenWeatherIcon">Thunderstorms</string>

    <string name="channelId">Channel Name</string>
    <string name="channelString">Channel String</string>

    <!--    //Dropdown Menu-->
    <string-array name="city_list">
        <item>London</item>
        <item>Lichfield</item>
        <item>Los Angeles</item>
        <item>New York</item>
        <item>Tokyo</item>
    </string-array>

</resources>